--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 <p>Utilizá los botones del menú para navegar por las distintas secciones o escribí palabras clave como "farmacia", "turno", "poda", etc.</p>
             </div>
             <div class="modal-footer">
-                <p class="copyright">© 2024 Municipalidad de Chascomús</p>
+                <p class="copyright">© 2026 Municipalidad de Chascomús
+                Federico de Sistemas</p>
                 <p class="credit" id="authorCredit"></p>
             </div>
         </div>
