--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header-brand">
         <img src="logo.png" class="header-logo" alt="Logo Muni" onerror="this.style.display='none'">
         <div class="header-text">
-            <span class="header-title">MuniBot</span>
+            <span class="header-title">ChascoBot</span>
             <span class="header-subtitle">🟢 En línea</span>
         </div>
     </div>
