Revise branding from MuniBot to MuniChas
Updated the title and various text elements to reflect the new branding.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content">
-    <title>MuniBot Chascomús</title>
+    <title>MuniChas - Asistente Virtual de la Municipalidad de Chascomús</title>
     <meta name="theme-color" content="#004a7c">
     <meta name="description" content="Asistente virtual de la Municipalidad de Chascomús">
     <link rel="manifest" href="manifest.json">
@@ -16,7 +16,7 @@
     <div class="header-brand">
         <img src="logo.png" class="header-logo" alt="Logo Muni" onerror="this.style.display='none'">
         <div class="header-text">
-            <span class="header-title">ChascoBot</span>
+            <span class="header-title">MuniChas</span>
             <span class="header-subtitle">🟢 En línea</span>
         </div>
     </div>
@@ -46,15 +46,15 @@
     <div class="modal-content">
         <button class="modal-close" onclick="toggleInfo()">×</button>
         <div class="modal-header">
-            <h3 class="modal-title">Sobre MuniBot</h3>
+            <h3 class="modal-title">Sobre MuniChas</h3>
         </div>
         <div class="modal-body">
             <p>Asistente Virtual Oficial de la Municipalidad de Chascomús.</p>
-            <p>Este servicio utiliza respuestas automáticas para orientar al vecino.</p>
+            <p>Este servicio utiliza respuestas automáticas y botones interactivos para orientar al vecino.</p>
             <div class="modal-credit" id="authorCredit"></div>
         </div>
         <div class="modal-footer">
-            <p class="copyright">© Creado por Federico Perez 2026 Municipalidad de Chascomús</p>
+            <p class="copyright">© Creado por Federico Perez Speroni 2026 Municipalidad de Chascomús</p>
         </div>
     </div>
 </div>
