Update infoModal content in index.html

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 <div id="infoModal" class="modal">
     <div class="modal-content">
         <h3>Sobre MuniBot</h3>
-        <p>Asistente Virtual Oficial de la Municipalidad de Chascomús. Donde podes encontrat informacion, links y más.</p>
-        <p>© Federico perez Speroni 2026 Municipalidad de Chascomús</p>
+        <p>Asistente Virtual Oficial de la Municipalidad de Chascomús. Donde podes encontrar información, links y más.Para que puedas gestionar sin moverte de tu casa</p>
+        <p>© Creado por "Federico Perez Speroni"</p> 
+        <p>© Para la  Municipalidad de Chascomús 2026</p>
         <button class="option-button" onclick="toggleInfo()">Cerrar</button>
     </div>
 </div>
